--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -40,7 +40,7 @@
     Guardar
   </ion-button>
 
-
+Diana Congote --- Hugo chaves
   <ion-list>
     <ion-item *ngFor="let item of usuarios">
       <ion-label>{{ item.nombre }}</ion-label>
