taller en clase

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,11 +9,11 @@
 
 <ion-content [fullscreen]="true">
   <ion-button routerLink="/contacto" >
-    Ir a Contacto
+    Saludo
   </ion-button>
 
   <ion-button routerLink="/nosotros">
-    Ir a Nosotros
+    Operaciones
   </ion-button>
 
   <ion-item>
@@ -40,7 +40,7 @@
     Guardar
   </ion-button>
 
-Diana Congote --- Hugo chaves
+Diana Congote 
   <ion-list>
     <ion-item *ngFor="let item of usuarios">
       <ion-label>{{ item.nombre }}</ion-label>
