--- a/src/app/contacto/contacto.page.html
+++ b/src/app/contacto/contacto.page.html
@@ -6,7 +6,6 @@
     <ion-title>Editar</ion-title>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
   <ion-button routerLink="/home">
     volver
@@ -15,4 +14,12 @@
   <ion-button routerLink="/nosotros">
     nosotros
   </ion-button>
+  <ion-item>
+    <ion-label position="floating">Ingresa tu nombre</ion-label>
+    <ion-input [(ngModel)]="nombre"></ion-input>
+  </ion-item>
+
+  <ion-button color="success" (click)="saludar()">
+    Saludar
+  </ion-button><br>
 </ion-content>
