taller individual diana

--- a/src/app/nosotros/nosotros.page.html
+++ b/src/app/nosotros/nosotros.page.html
@@ -36,8 +36,8 @@
   </ion-button><br>
   {{ this.mensaje }}
   {{ this.numero1 }}
-  y
+  {{ this.signo }}
   {{ this.numero2 }}
-  es
+  {{ this.igual }}
   {{ this.resultado }}
 </ion-content>
