--- a/src/app/contacto/contacto.page.html
+++ b/src/app/contacto/contacto.page.html
@@ -12,7 +12,7 @@
   </ion-button>
 
   <ion-button routerLink="/nosotros">
-    nosotros
+    Operaciones
   </ion-button>
   <ion-item>
     <ion-label position="floating">Ingresa tu nombre</ion-label>
