--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,13 @@
 
 <ion-content [fullscreen]="true">
   <ion-button routerLink="/contacto" >
-    Saludo
+    rango
+  </ion-button>
+  <ion-button routerLink="/parcial" >
+    para el parcial 1
+  </ion-button>
+  <ion-button routerLink="/otraparcial" >
+    para el parcial 2
   </ion-button>
 
   <ion-button routerLink="/nosotros">
