--- a/src/app/contacto/contacto.page.html
+++ b/src/app/contacto/contacto.page.html
@@ -18,8 +18,17 @@
     <ion-label position="floating">Ingresa tu nombre</ion-label>
     <ion-input [(ngModel)]="nombre"></ion-input>
   </ion-item>
+  <ion-item>
+    <ion-label position="floating">rango menor</ion-label>
+    <ion-input [(ngModel)]="a"></ion-input>
+  </ion-item>
+  <ion-item>
+    <ion-label position="floating">rango mayor</ion-label>
+    <ion-input [(ngModel)]="b"></ion-input>
+  </ion-item>
 
-  <ion-button color="success" (click)="saludar()">
-    Saludar
+  <ion-button color="success" (click)="rangos()">
+    hallar numero
   </ion-button><br>
+  {{ this.c }}
 </ion-content>
